Bug 131867 - Don't call setlocale() while printing. r=biesi, sr=tor